# hirnrender

./: CMakeLists.txt  VTKnotes  VTKnotes~  dicom.py  getImageData.cpp~  test.py~
HC/: VTKnotes  chiffre.cpp  chiffre.cpp~  dicom.py  isisReader.cpp  setup.cfg~  setup.py  setup.py~  spammodule.c~  test.py
HC/isisReader/: blahsetup.cfg  isisReader.cpp  setup.cfg  setup.cfg~
data/: d.v
data/S3/: WT6T110218.MR.MW_PAND.3.1.2011.02.18.14.20.07.796875.81665566.IMA  WT6T110218.MR.MW_PAND.3.10.2011.02.18.14.20.07.796875.81665728.IMA  WT6T110218.MR.MW_PAND.3.100.2011.02.18.14.20.07.796875.81672366.IMA  WT6T110218.MR.MW_PAND.3.101.2011.02.18.14.20.07.796875.81672384.IMA  WT6T110218.MR.MW_PAND.3.102.2011.02.18.14.20.07.796875.81672402.IMA  WT6T110218.MR.MW_PAND.3.103.2011.02.18.14.20.07.796875.81672420.IMA  WT6T110218.MR.MW_PAND.3.104.2011.02.18.14.20.07.796875.81672438.IMA  WT6T110218.MR.MW_PAND.3.105.2011.02.18.14.20.07.796875.81672456.IMA  WT6T110218.MR.MW_PAND.3.106.2011.02.18.14.20.07.796875.81672474.IMA  WT6T110218.MR.MW_PAND.3.107.2011.02.18.14.20.07.796875.81672492.IMA  WT6T110218.MR.MW_PAND.3.108.2011.02.18.14.20.07.796875.81672510.IMA  WT6T110218.MR.MW_PAND.3.109.2011.02.18.14.20.07.796875.81672528.IMA  WT6T110218.MR.MW_PAND.3.11.2011.02.18.14.20.07.796875.81665746.IMA  WT6T110218.MR.MW_PAND.3.110.2011.02.18.14.20.07.796875.81672546.IMA  WT6T110218.MR.MW_PAND.3.111.2011.02.18.14.20.07.796875.81672564.IMA  WT6T110218.MR.MW_PAND.3.112.2011.02.18.14.20.07.796875.81672582.IMA  WT6T110218.MR.MW_PAND.3.113.2011.02.18.14.20.07.796875.81672600.IMA  WT6T110218.MR.MW_PAND.3.114.2011.02.18.14.20.07.796875.81672618.IMA  WT6T110218.MR.MW_PAND.3.115.2011.02.18.14.20.07.796875.81672636.IMA  WT6T110218.MR.MW_PAND.3.116.2011.02.18.14.20.07.796875.81672654.IMA  WT6T110218.MR.MW_PAND.3.117.2011.02.18.14.20.07.796875.81672672.IMA  WT6T110218.MR.MW_PAND.3.118.2011.02.18.14.20.07.796875.81672690.IMA  WT6T110218.MR.MW_PAND.3.119.2011.02.18.14.20.07.796875.81672708.IMA  WT6T110218.MR.MW_PAND.3.12.2011.02.18.14.20.07.796875.81665764.IMA  WT6T110218.MR.MW_PAND.3.120.2011.02.18.14.20.07.796875.81672726.IMA  WT6T110218.MR.MW_PAND.3.121.2011.02.18.14.20.07.796875.81672744.IMA  WT6T110218.MR.MW_PAND.3.122.2011.02.18.14.20.07.796875.81672762.IMA  WT6T110218.MR.MW_PAND.3.123.2011.02.18.14.20.07.796875.81672780.IMA  WT6T110218.MR.MW_PAND.3.124.2011.02.18.14.20.07.796875.81672798.IMA  WT6T110218.MR.MW_PAND.3.125.2011.02.18.14.20.07.796875.81672816.IMA  WT6T110218.MR.MW_PAND.3.126.2011.02.18.14.20.07.796875.81672834.IMA  WT6T110218.MR.MW_PAND.3.127.2011.02.18.14.20.07.796875.81672852.IMA  WT6T110218.MR.MW_PAND.3.128.2011.02.18.14.20.07.796875.81672870.IMA  WT6T110218.MR.MW_PAND.3.129.2011.02.18.14.20.07.796875.81672888.IMA  WT6T110218.MR.MW_PAND.3.13.2011.02.18.14.20.07.796875.81665782.IMA  WT6T110218.MR.MW_PAND.3.130.2011.02.18.14.20.07.796875.81672906.IMA  WT6T110218.MR.MW_PAND.3.131.2011.02.18.14.20.07.796875.81672924.IMA  WT6T110218.MR.MW_PAND.3.132.2011.02.18.14.20.07.796875.81672942.IMA  WT6T110218.MR.MW_PAND.3.133.2011.02.18.14.20.07.796875.81672960.IMA  WT6T110218.MR.MW_PAND.3.134.2011.02.18.14.20.07.796875.81672978.IMA  (+200 more)
src/: .renderer.cpp.swp  main.cpp  renderImage.cpp  renderImage.h  renderWidget.cpp  renderWidget.h  renderer.cpp  setCamera.cpp  setCamera.h  tags  volume.cpp  volume.h  vtkSliderCallback.cpp  vtkSliderCallback.h
test/: CMakeLists.txt  CMakeLists.txt~
test/src/: IsisReader.cpp  getImageData.cpp~  test.cpp  test2.cpp  test3.cpp
